--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
