--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bls-browser-wallet",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
