--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bls-wallet-clients": "^0.6.0",
     "eslint": "^8.21.0",
     "ethers": "^5.6.9",
+    "phosphor-react": "^1.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
