--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "bls-wallet-clients": "^0.6.0",
+    "bls-wallet-clients": "0.7.3",
     "eslint": "^8.21.0",
     "ethers": "^5.6.9",
     "phosphor-react": "^1.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "typescript": "^4.4.2",
