Use env vars for aggregator urls

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 REACT_APP_BLS_TEAM_PK=
+
+# Arbitrum Goerli
 REACT_APP_ARBITRUM_GOERLI_RPC=
+REACT_APP_ARBITRUM_GOERLI_AGG=
+
+# Optimism Goerli
 REACT_APP_OPTIMISM_GOERLI_RPC=
+REACT_APP_OPTIMISM_GOERLI_AGG=
