--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "bls-wallet-clients": "0.8.2",
+    "bls-wallet-clients": "0.8.2-77f1638",
     "eslint": "^8.21.0",
-    "ethers": "^5.6.9",
+    "ethers": "^5.7.2",
     "phosphor-react": "^1.4.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
