--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "bls-wallet-clients": "0.8.2-77f1638",
+    "bls-wallet-clients": "0.8.3",
     "eslint": "^8.21.0",
+    "ethdk": "^0.0.0-beta.4",
     "ethers": "^5.7.2",
     "phosphor-react": "^1.4.1",
     "qrcode.react": "^3.1.0",
@@ -29,7 +30,7 @@
     "zustand": "^4.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "PORT=3001 react-app-rewired start",
     "start-no-source": "GENERATE_SOURCEMAP=false react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
